# SimpleZmqExample

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
contrib/: CMakeLists.txt  libzmq.CMakeLists.txt.in
data/: project_uncrustify.cfg
src/: CMakeLists.txt  HelloWorldServer.cpp
src/HelloWorldClient/: CMakeLists.txt  HelloWorldClient.cpp
src/HelloWorldServer/: CMakeLists.txt  HelloWorldServer.cpp
src/SimpleHelloWorld/: CMakeLists.txt
